mdmCeneveo/src/objects/Tax_Information__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Days_before_Expiration_Date__c</fullName>
        <label>Alert Days before Expiration Date</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificate_Valid_From_Date__c</fullName>
        <label>Certificate Valid From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certificate_Valid_To_Date__c</fullName>
        <label>Certificate Valid To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_District__c</fullName>
        <label>County/District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tax Informations</relationshipLabel>
        <relationshipName>Tax_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Entity_Type__c</fullName>
        <label>Tax Entity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Entity__c</fullName>
        <label>Tax Entity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exemption_Certificate_Number__c</fullName>
        <label>Tax_Exemption_Certificate_Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Identifier__c</fullName>
        <label>Tax Identifier</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <label>Tax Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town_Posta_Code__c</fullName>
        <label>Town Posta Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tax Information</label>
    <nameField>
        <displayFormat>TAX-{0000}</displayFormat>
        <label>Tax Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>